# Home

./: .gitignore  CNAME  README.md  i18n.js  index.html  script.js  styles.css  subjects.html
.github/workflows/: deploy-pages.yml
docs/: code-zone-aula-template.pptx
learning/: apis-sistemas.md  data-science.md  engenharia-dados.md  genai.md  graphrag.md  machine-learning.md  matematica-aplicada.md  python-fundamentos.md
research/: index.html  script.js  styles.css
subjects/_shared/: research-data.js  subject-page.css  subject-page.js
subjects/apis/: index.html  script.js  styles.css
subjects/data-analytics/: index.html  script.js  styles.css
subjects/data-analytics/modules/criacao-graficos/: README.md  index.html  script.js  styles.css
subjects/data-science/: index.html  script.js
subjects/engenharia-dados/: index.html  script.js  styles.css
subjects/genai/: index.html  script.js  styles.css
subjects/graphrag/: index.html  script.js  styles.css
subjects/machine-learning/: index.html  script.js  styles.css
subjects/matematica/: index.html  script.js  styles.css
subjects/matematica/modules/: solver-topic.css
subjects/mlops/: index.html  script.js  styles.css
subjects/python/: index.html  script.js  styles.css
subjects/python/modules/ambientes-python/examples/: pyproject.toml  requirements.txt
subjects/python/modules/ambientes-python/examples/src/equipment_health/: __init__.py  main.py
subjects/shared/: VIDEO_GUIDE.md  research-data.js  subject-page.css  subject-page.js  video-embed.css  video-embed.js
(+145 files in other folders)
